# servicio

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml
apps/desktop/: index.html  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
apps/desktop/scripts/: prepare-sidecar.sh  set-version.mjs
apps/desktop/src/: App.tsx  api.ts  dashboardTotals.ts  groupStats.test.ts  groupStats.ts  index.css  notify.ts  store.test.ts  store.ts  theme.ts  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: bridge.rs  events.rs  lib.rs  main.rs  sidecar.rs  state.rs
apps/desktop/src-tauri/tests/: bridge_integration.rs
apps/desktop/src/components/: AddWorkerForm.test.tsx  AddWorkerForm.tsx  CreateFlow.test.tsx  CreateFlow.tsx  Dashboard.test.tsx  Dashboard.tsx  DashboardGraphs.test.tsx  DashboardGraphs.tsx  GroupsView.test.tsx  GroupsView.tsx  LogView.test.tsx  LogView.tsx  MetricsTab.test.tsx  MetricsTab.tsx  SettingsView.test.tsx  SettingsView.tsx  Sidebar.tsx  Sparkline.tsx  StatusDot.tsx  StatusFooter.tsx  WorkerCard.tsx  WorkerDetail.test.tsx  WorkerDetail.tsx  runMode.ts  status.ts
crates/servicio-cli/: Cargo.toml
crates/servicio-cli/src/: client.rs  main.rs
crates/servicio-cli/tests/: e2e.rs
crates/servicio-core/: Cargo.toml
crates/servicio-core/src/: backoff.rs  error.rs  event.rs  lib.rs  logsink.rs  manager.rs  process.rs  schedule.rs  state.rs  supervisor.rs  worker.rs
crates/servicio-core/tests/: restart_integration.rs
crates/servicio-daemon/: Cargo.toml  build.rs
crates/servicio-daemon/src/: cli.rs  db.rs  lib.rs  lock.rs  main.rs  paths.rs  sampler.rs  serve.rs  service.rs  token.rs
crates/servicio-daemon/tests/: cli_integration.rs  serve_integration.rs
crates/servicio-detect/: Cargo.toml
crates/servicio-detect/src/: crontab.rs  laravel.rs  lib.rs  node.rs  procfile.rs  python.rs  tasks.rs
crates/servicio-ipc/: Cargo.toml
crates/servicio-ipc/src/: lib.rs  transport.rs  types.rs
docs/: RELEASING.md
docs/superpowers/plans/: 2026-06-18-servicio-phase1-core-daemon.md  2026-06-18-servicio-phase2a-ipc.md  2026-06-18-servicio-phase2b-gui.md  2026-06-18-servicio-phase2c-1-run-modes.md  2026-06-18-servicio-phase2c-2-metrics.md  2026-06-18-servicio-phase2c-3-detect.md  2026-06-18-servicio-phase2c-5-gui.md  2026-06-18-servicio-phase3-1-service.md  2026-06-18-servicio-phase3-2-gui-service.md  2026-06-18-servicio-phase3-3-packaging.md
docs/superpowers/specs/: 2026-06-18-servicio-design.md  2026-06-18-servicio-phase2a-ipc-design.md  2026-06-18-servicio-phase2b-gui-design.md  2026-06-18-servicio-phase2c-design.md  2026-06-18-servicio-phase3-packaging-design.md  2026-06-18-servicio-phase4-detection-organization-design.md
site/: README.md  astro.config.mjs  package-lock.json  package.json
site/public/: robots.txt  sitemap.xml
site/src/components/: Architecture.astro  Features.astro  Footer.astro  Header.astro  Hero.astro  Install.astro  Landing.astro  Problem.astro  Showcase.astro
site/src/i18n/: ar.json  de.json  en.json  es.json  fr.json  hi.json  ui.ts
site/src/layouts/: Base.astro
site/src/pages/[lang]/: index.astro
site/src/styles/: global.css  tokens.css
