[workspace]
resolver = "2"
members = ["crates/servicio-core", "crates/servicio-daemon", "crates/servicio-ipc"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
tempfile = "3"
fs2 = "0.4"
getrandom = "0.2"
anyhow = "1"
