[package]
name = "servicio-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
cron = "0.12"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tempfile.workspace = true
