[package]
name = "servicio-daemon"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
name = "servicio_daemon_lib"
path = "src/lib.rs"

[[bin]]
name = "servicio-daemon"
path = "src/main.rs"

[dependencies]
servicio-core = { path = "../servicio-core" }
servicio-ipc = { path = "../servicio-ipc" }
fs2.workspace = true
getrandom.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
clap.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
