[package]
name = "servicio-daemon"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
name = "servicio_daemon_lib"
path = "src/lib.rs"

[[bin]]
name = "servicio-daemon"
path = "src/main.rs"

[dependencies]
servicio-core = { path = "../servicio-core" }
servicio-ipc = { path = "../servicio-ipc" }
servicio-detect = { path = "../servicio-detect" }
fs2.workspace = true
getrandom.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
sysinfo = "0.32"
clap.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile.workspace = true
